--- a/src/app/resourcebundles/data/consumption/mr.properties
+++ b/src/app/resourcebundles/data/consumption/mr.properties
@@ -421,7 +421,7 @@ frmelmnts.lbl.share = सामायिक करा
 frmelmnts.lbl.sharelink = लिंक शेअर करा
 frmelmnts.lbl.showLess = कमी दाखवा
 frmelmnts.lbl.showingResults = निकाल दाखवत आहोत
-frmelmnts.lbl.showingResultsFor = <span class="sb-pageSection-count sb-label sb-label-xs sb-label-error mr-5">{searchString}</span> यासाठी मजकूर दाखवत आहोत -
+frmelmnts.lbl.showingResultsFor = {searchString} यासाठी मजकूर दाखवत आहोत -
 frmelmnts.lbl.signUp = साइन अप करा
 frmelmnts.lbl.signinenrollHeader = कोर्स नोंदणीकृत वापरकर्त्यांसाठी आहेत. प्रवेश मिळवण्यासाठी साईन ईन करा.
 frmelmnts.lbl.signinenrollTitle = या कोर्ससाठी नोंदणी करायला साइन इन करा
