Email to and from changes

--- a/src/app/client/src/app/modules/core/services/configure/data.config.json
+++ b/src/app/client/src/app/modules/core/services/configure/data.config.json
@@ -5,6 +5,6 @@
     "actionName": "Test Action",
     "actionUrl": "https://societal-sunbird.stackroute.com/",
     "template": "acceptFlag",
-    "email": ["trtanmay17@gmail.com"],
+    "email": ["space@societalplatform.org"],
     "fromEmail": "space@societalplatform.org"
 }
