--- a/src/app/client/src/app/modules/public/services/configure/data.config.json
+++ b/src/app/client/src/app/modules/public/services/configure/data.config.json
@@ -8,6 +8,6 @@
     "actionUrl": "https://societal-sunbird.stackroute.com/",
     "template": "acceptFlag",
     "contacttemplate":"acceptFlag",
-    "email": ["trtanmay17@gmail.com"],
+    "email": ["space@societalplatform.org"],
     "fromEmail": "space@societalplatform.org"
 }
