Insertion of static pages completed

--- a/src/app/resourcebundles/data/creation/hi.properties
+++ b/src/app/resourcebundles/data/creation/hi.properties
@@ -152,19 +152,19 @@ frmelmnts.scttl.myworkspace=My Workspace
 
 # Side Navigations
 frmelmnts.snav.start=Create
-frmelmnts.snav.draft=Drafts
-frmelmnts.snav.inreview=Review Submissions
-frmelmnts.snav.published=Published
-frmelmnts.snav.alluploads=All Uploads
-frmelmnts.snav.upForReview=Up For Review
+frmelmnts.snav.draft=ड्राफ्ट
+frmelmnts.snav.inreview=सबमिशन की समीक्षा करें
+frmelmnts.snav.published=प्रकाशित
+frmelmnts.snav.alluploads=सभी अपलोड
+frmelmnts.snav.upForReview=समीक्षा के लिए ऊपर
 frmelmnts.snav.flagged=Flagged
 frmelmnts.snav.limitedPublishing=Limited Publishing
-frmelmnts.snav.allmycontents = All My Content
+frmelmnts.snav.allmycontents = मेरी सभी सामग्री
 frmelmnts.snav.flagReviewer = Flag Review
-frmelmnts.snav.Collaboratingon = Collaborations
+frmelmnts.snav.Collaboratingon = सहयोग
 
 # Links
-frmelmnts.lnk.coursebacthes=Course Batches
+frmelmnts.lnk.coursebacthes=कोर्स बैच
 
 # status messages
 messages.stmsg.m0008=no-results
