--- a/src/app/client/package.json
+++ b/src/app/client/package.json
@@ -28,26 +28,26 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/core": "^0.2.0",
-    "@angular/animations": "^7.2.10",
-    "@angular/common": "^7.2.10",
-    "@angular/compiler": "^7.2.10",
-    "@angular/core": "^7.2.10",
-    "@angular/forms": "^7.2.10",
-    "@angular/http": "^7.2.10",
-    "@angular/platform-browser": "^7.2.10",
-    "@angular/platform-browser-dynamic": "^7.2.10",
-    "@angular/router": "^7.2.10",
+    "@angular/animations": "^7.2.15",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
     "@ng-bootstrap/ng-bootstrap": "^3.3.1",
     "@project-sunbird/telemetry-sdk": "^0.0.16",
     "@project-sunbird/web-extensions": "^0.0.2",
-    "@types/lodash": "^4.14.104",
-    "angular-inport": "^2.0.0",
+    "@types/lodash": "^4.14.138",
+    "angular-inport": "^2.0.1",
     "angular-shepherd": "0.0.5",
     "angular2-multiselect-dropdown": "^3.2.1",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
-    "core-js": "^2.4.1",
+    "core-js": "^2.6.9",
     "datatables.net-dt": "1.10.19",
     "fine-uploader": "^5.15.7",
     "font-awesome": "^4.7.0",
@@ -58,28 +58,28 @@
     "html2canvas": "^1.0.0-rc.3",
     "html2pdf.js": "^0.9.1",
     "izimodal": "^1.5.1",
-    "jquery": "^3.3.1",
-    "jquery.fancytree": "^2.28.1",
+    "jquery": "^3.4.1",
+    "jquery.fancytree": "^2.32.0",
     "jspdf": "^1.5.3",
-    "lodash-es": "^4.17.11",
+    "lodash-es": "^4.17.15",
     "medium-zoom": "^1.0.4",
-    "moment": "^2.20.1",
-    "moment-duration-format": "^2.2.2",
-    "ng-recaptcha": "^4.2.1",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
+    "ng-recaptcha": "^4.3.0",
     "ng2-cache-service": "^1.1.1",
-    "ng2-charts": "^2.2.2",
+    "ng2-charts": "^2.3.0",
     "ng2-semantic-ui": "github:project-sunbird/ng2-semantic-ui",
     "ng4-click-outside": "^1.0.1",
-    "ngx-avatar": "^3.3.3",
-    "ngx-daterangepicker-material": "^2.1.3",
-    "ngx-device-detector": "^1.3.5",
+    "ngx-avatar": "^3.7.0",
+    "ngx-daterangepicker-material": "^2.1.8",
+    "ngx-device-detector": "^1.3.11",
     "ngx-filesize": "^1.1.4",
     "ngx-infinite-scroll": "^6.0.0",
     "ngx-md": "^7.0.0",
-    "ngx-order-pipe": "^2.0.1",
+    "ngx-order-pipe": "^2.0.4",
     "ngx-slick": "^0.2.1",
-    "node-sass": "^4.11.0",
-    "rxjs": "^6.4.0",
+    "node-sass": "^4.12.0",
+    "rxjs": "^6.5.3",
     "shepherd.js": "^2.10.0",
     "slick-carousel": "1.6.0",
     "time-ago-pipe": "^1.3.2",
@@ -87,17 +87,17 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
-    "@angular/cli": "^7.3.6",
-    "@angular/compiler-cli": "^7.2.10",
-    "@angular/language-service": "^7.2.10",
-    "@compodoc/compodoc": "^1.1.9",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.3.1",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
+    "@compodoc/compodoc": "^1.1.10",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/jquery": "^3.3.31",
     "@types/jquery.fancytree": "^2.7.34",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^5.0.0",
+    "@types/node": "^6.0.118",
+    "codelyzer": "^5.1.0",
     "compodoc": "0.0.41",
     "husky": "0.14.3",
     "jasmine-core": "~2.8.0",
