--- a/src/app/package.json
+++ b/src/app/package.json
@@ -86,6 +86,7 @@
     "express-cassandra": "2.1.0",
     "express-http-proxy": "^1.0.6",
     "express-session": "^1.15.3",
+    "fibers": "^4.0.1",
     "googleapis": "^36.0.0",
     "gulp-brotli": "^1.2.1",
     "gulp-inject-string": "^1.1.2",
