--- a/src/app/client/src/app/modules/shared/services/config/app.config.json
+++ b/src/app/client/src/app/modules/shared/services/config/app.config.json
@@ -356,7 +356,7 @@
       "ribbon.left.image": "badgeAssertions[0].badgeClassImage"
     },
     "orgId":["01279840588057804865"],
-    "orgName":["space", "ekStep","shikshaLokam","arghyam","pie","nulp","eGov","echo","avanti","socion"]
+    "orgName":["societal platform", "ekStep","shikshaLokam","arghyam","pie","nulp","eGov","echo","avanti","socion"]
   },
   "CoursePage": {
     "slickSize": 10,
