added new resource bundle with language file hi,ur,es

--- a/src/app/resourcebundles/data/creation/es.properties
+++ b/src/app/resourcebundles/data/creation/es.properties
@@ -14,28 +14,28 @@ frmelmnts.btn.anncmntselectrecipients=seleccionar destinatarios
 frmelmnts.btn.anncmntdtlsview=ver
 frmelmnts.btn.anncmntgotit=Entendido
 frmelmnts.btn.save=salvar
-frmelmnts.btn.addmembers=Añadir miembros
+frmelmnts.btn.addMembers=Añadir miembros
 frmelmnts.btn.createbatch=crear lote
 frmelmnts.btn.cancel=cancelar
 frmelmnts.btn.update=actualizar
 frmelmnts.btn.updatebatch=lote de actualización
-frmelmnts.btn.checklistcomment=comentario
-frmelmnts.btn.checklistcancel=cancelar
-frmelmnts.btn.checklistpublish=publicar
-frmelmnts.btn.checklistrequestchanges=solicitar cambios
+frmelmnts.btn.checkListComment=comentario
+frmelmnts.btn.checklistCancel=cancelar
+frmelmnts.btn.checklistPublish=publicar
+frmelmnts.btn.checkListRequestChanges=solicitar cambios
 frmelmnts.btn.publish=publicar
-frmelmnts.btn.requestchanges=solicitar cambios
+frmelmnts.btn.requestChanges=solicitar cambios
 frmelmnts.btn.startcreating=empieza a crear
 frmelmnts.btn.login=iniciar sesión
 
 
 # labels
 frmelmnts.lbl.name=nombre
-frmelmnts.lbl.name=nombre
+frmelmnts.lbl.Name=nombre
 frmelmnts.lbl.email=identificación de correo
 frmelmnts.lbl.contact=contacto
 frmelmnts.lbl.delete=Eliminar
-frmelmnts.lbl.pleaseselect=por favor seleccione
+frmelmnts.lbl.pleaseSelect=por favor seleccione
 frmelmnts.lbl.anncmntttlresend=reenviar anuncio
 frmelmnts.lbl.createnewanncmnt=crear nuevo anuncio
 frmelmnts.lbl.createnewanncmntdesc=complete todos los campos obligatorios para crear el anuncio.
@@ -50,7 +50,7 @@ frmelmnts.lbl.previewanncmntdesc=así es como se verá su anuncio.
 frmelmnts.lbl.anncmntstep=paso
 frmelmnts.lbl.anncmnttitle=título
 frmelmnts.lbl.anncmntfrom=de
-frmelmnts.lbl.anncmntfromdesc=ingrese la organización / departamento que envió el anuncio
+frmelmnts.lbl.anncmntfromDesc=ingrese la organización / departamento que envió el anuncio
 frmelmnts.lbl.anncmnttype=tipo de anuncio
 frmelmnts.lbl.anncmntdesc=Descripción (opcional)
 frmelmnts.lbl.anncmntlink=url / enlace web
@@ -63,16 +63,16 @@ frmelmnts.lbl.anncmntsentdesc=Su anuncio ha sido enviado a todos sus destinatari
 frmelmnts.lbl.anncmntcancel=¿estás seguro de que quieres dejar de crear este anuncio?
 frmelmnts.lbl.anncmntcanceldesc=perderá su trabajo si cierra este anuncio
 frmelmnts.lbl.organisation=organización
-frmelmnts.lbl.organisationname=nombre de la organización
-frmelmnts.lbl.suborganisation =suborganización
-frmelmnts.lbl.selectsuborganisation=seleccione suborganización
-frmelmnts.lbl.unselectall=deselecciona todo
-frmelmnts.lbl.orgname=orgname
-frmelmnts.lbl.selectmentors=seleccionar mentores
-frmelmnts.lbl.selectparticipants=seleccione participantes
+frmelmnts.lbl.organisationName=nombre de la organización
+frmelmnts.lbl.subOrganisation =suborganización
+frmelmnts.lbl.selectSubOrganisation=seleccione suborganización
+frmelmnts.lbl.unselectAll=deselecciona todo
+frmelmnts.lbl.orgName=orgname
+frmelmnts.lbl.SelectMentors=seleccionar mentores
+frmelmnts.lbl.SelectParticipants=seleccione participantes
 frmelmnts.lbl.mentors=mentores
 frmelmnts.lbl.participants=Participantes
-frmelmnts.lbl.searchmembers=buscar miembros
+frmelmnts.lbl.searchMembers=buscar miembros
 frmelmnts.lbl.createnewbatch=crear nuevo lote
 frmelmnts.lbl.createbatch=crear lote
 frmelmnts.lbl.batchmentors=mentores en el lote
@@ -88,7 +88,7 @@ frmelmnts.lbl.natureofbatch=tipo de lote
 frmelmnts.lbl.inviteonly=sólo invitados
 frmelmnts.lbl.open=abierto
 frmelmnts.lbl.play=jugar
-frmelmnts.lbl.discardchange=descartar los cambios
+frmelmnts.lbl.discardChange=descartar los cambios
 frmelmnts.lbl.textbook=libro
 frmelmnts.lbl.textbookdescription=construir libros usando recursos para una experiencia de aprendizaje interesante.
 frmelmnts.lbl.course=curso
@@ -101,41 +101,41 @@ frmelmnts.lbl.lessonplandescription=Planes de lecciones marco con secciones estr
 frmelmnts.lbl.lessonplan=Plan de estudios
 frmelmnts.lbl.contentupload=subir contenido
 frmelmnts.lbl.contentuploaddescription=Puedes subir contenido aquí.
-frmelmnts.lbl.contentcaps=contenido
+frmelmnts.lbl.contentCaps=contenido
 frmelmnts.lbl.lastupdate=última actualización
-frmelmnts.lbl.statuscaps=estado
-frmelmnts.lbl.flagreview=revisión de la bandera
-frmelmnts.lbl.pendingsince=pendiente desde
+frmelmnts.lbl.statusCaps=estado
+frmelmnts.lbl.flagReview=revisión de la bandera
+frmelmnts.lbl.pendingSince=pendiente desde
 frmelmnts.lbl.deletecontent=eliminar contenido
 frmelmnts.lbl.deleteconfirm=¿Estás seguro de eliminar este contenido?
 frmelmnts.lbl.deletepublishedcontent=retirar contenido
 frmelmnts.lbl.deletepublishedconfirm=retirarme del contenido?
-frmelmnts.lbl.checklistpublish=publicar
-frmelmnts.lbl.checklistcancel=cancelar
-frmelmnts.lbl.checklistpublish=publicar
-frmelmnts.lbl.showfilters=mostrar filtros
+frmelmnts.lbl.checkListPublish=publicar
+frmelmnts.lbl.checklistCancel=cancelar
+frmelmnts.lbl.checkListPublish=publicar
+frmelmnts.lbl.showFilters=mostrar filtros
 frmelmnts.lbl.sortby=ordenar por
 frmelmnts.lbl.designcourse=curso de diseño
 frmelmnts.lbl.createtextbook=crear libro
 frmelmnts.lbl.createlessontext=crear recurso
 frmelmnts.lbl.createcollection=crear colección
 frmelmnts.lbl.createlessonplan=crear plan de lección
-frmelmnts.lbl.viewcaps=ver
-frmelmnts.lbl.editcaps=editar
-frmelmnts.lbl.authorcaps=autor
-frmelmnts.lbl.lastupdatedcaps=última actualización
+frmelmnts.lbl.viewCaps=ver
+frmelmnts.lbl.editCaps=editar
+frmelmnts.lbl.authorCaps=autor
+frmelmnts.lbl.lastupdatedCaps=última actualización
 frmelmnts.lbl.content=contenido
 frmelmnts.lbl.status=estado
 frmelmnts.lbl.edit=editar
 frmelmnts.lbl.author=autor
-frmelmnts.lbl.coursename=Nombre del curso
+frmelmnts.lbl.courseName=Nombre del curso
 frmelmnts.lbl.publhwarng=Si ha hecho algunos comentarios o sugerencias de revisión, se perderán si se publica contenido. quieres publicar
-frmelmnts.lbl.disablepopuptext=este contenido no se puede eliminar
-frmelmnts.lbl.contactstateadmintoadd =comuníquese con el administrador de su estado para agregar más participantes a este lote
+frmelmnts.lbl.disablePopupText=este contenido no se puede eliminar
+frmelmnts.lbl.contactStateAdminToAdd =comuníquese con el administrador de su estado para agregar más participantes a este lote
 
 # prmpt
 frmelmnts.prmpt.search=buscar
-frmelmnts.prmpt.searchcontent=buscar contenido
+frmelmnts.prmpt.searchContent=buscar contenido
 
 # inline text
 frmelmnts.intxt.t0006=seleccione miembros del lote
@@ -147,7 +147,7 @@ frmelmnts.intxt.t0015=ver detalles del lote
 frmelmnts.instn.t0052=ingrese la descripción de este anuncio (máx .: 1200 caracteres)
 frmelmnts.instn.t0053=ingrese la url web (comenzando con http o https)
 frmelmnts.instn.t0054=nota: se debe proporcionar al menos uno de 'descripción' o 'url / enlace web' o 'archivo adjunto'.
-frmelmnts.instn.t0057=ingrese el título relevante para este anuncio (máx .: 100 caracteres)
+frmelmnts.instn.t0057=ingrese el título relevante para este anuncio (máximo: 100 caracteres)
 frmelmnts.instn.t0080=por favor espere ... cargando comentarios
 
 # section titles
@@ -157,21 +157,21 @@ frmelmnts.scttl.myworkspace=mi espacio de trabajo
 frmelmnts.snav.start=crear
 frmelmnts.snav.draft=borradores
 frmelmnts.snav.inreview=revisar envíos
-frmelmnts.snav.submittedforreview=enviado para su revisión
+frmelmnts.snav.submittedForReview=enviado para su revisión
 frmelmnts.snav.published=publicado
 frmelmnts.snav.alluploads=todas las cargas
-frmelmnts.snav.upforreview=para revisión
+frmelmnts.snav.upForReview=para revisión
 frmelmnts.snav.flagged=marcado
-frmelmnts.snav.limitedpublishing=publicación limitada
-frmelmnts.snav.sharevialink=compartido por enlace
+frmelmnts.snav.limitedPublishing=publicación limitada
+frmelmnts.snav.shareViaLink=compartido por enlace
 frmelmnts.snav.allmycontents =todo mi contenido
-frmelmnts.snav.flagreviewer =revisión de la bandera
-frmelmnts.snav.collaboratingon =colaboraciones
+frmelmnts.snav.flagReviewer =revisión de la bandera
+frmelmnts.snav.Collaboratingon =colaboraciones
 
 # links
 frmelmnts.lnk.coursebacthes=lotes de cursos
-frmelmnts.lnk.createdbyme=creado por mí
-frmelmnts.lnk.assignedtome=Asignado a mí
+frmelmnts.lnk.createdByMe=creado por mí
+frmelmnts.lnk.assignedToMe=Asignado a mí
 
 # status messages
 messages.stmsg.m0008=no hay resultados
@@ -201,7 +201,7 @@ messages.stmsg.m0107=desde se requiere
 messages.stmsg.m0108=su progreso
 messages.stmsg.m0109=la descripción es demasiado larga
 messages.stmsg.m0110=estamos buscando todo el contenido ...
-messages.stmsg.m0111=Parece que no hay nada que mostrar aquí. vaya a &quot;crear&quot; para comenzar a crear contenido
+messages.stmsg.m0111=Parece que no hay nada que mostrar aquí. vaya a "crear" para comenzar a crear contenido
 messages.stmsg.m0112=el contenido llegará pronto
 messages.stmsg.m0113=ingrese una fecha de inicio válida
 messages.stmsg.m0135=Introduzca una fecha válida
