license type dropdown implementation through forms

--- a/src/app/client/src/app/modules/shared/services/config/app.config.json
+++ b/src/app/client/src/app/modules/shared/services/config/app.config.json
@@ -1091,7 +1091,9 @@
     "explore-course": "explore-course",
     "framework-code": "framework-code",
     "courses": "courses",
-    "organization": "organization"
+    "organization": "organization",
+    "contentlicenses":"contentlicenses",
+    "softwarelicenses":"softwarelicenses"
   },
   "cacheServiceConfig": {
     "setTimeInMinutes": 10,
