email change back to space@societalplatform.org

--- a/src/app/client/src/app/modules/core/services/configure/data.config.json
+++ b/src/app/client/src/app/modules/core/services/configure/data.config.json
@@ -5,7 +5,7 @@
     "actionName": "Test Action",
     "actionUrl": "https://societal-sunbird.stackroute.com/",
     "template": "acceptFlag",
-    "email": ["adityagoenka94@gmail.com"],
+    "email": ["space@societalplatform.org"],
     "fromEmail": "space@societalplatform.org",
     "orgName": "space"
 }
