--- a/src/app/client/package.json
+++ b/src/app/client/package.json
@@ -80,6 +80,7 @@
     "ngx-slick": "^0.2.1",
     "node-sass": "^4.12.0",
     "rxjs": "^6.5.3",
+    "sessionstorage": "^0.1.0",
     "shepherd.js": "^2.10.0",
     "slick-carousel": "1.6.0",
     "time-ago-pipe": "^1.3.2",
