code merged with circular dependency

--- a/src/app/resourcebundles/data/consumption/en.properties
+++ b/src/app/resourcebundles/data/consumption/en.properties
@@ -609,7 +609,7 @@ frmelmnts.snav.shareViaLink = Shared via link
 frmelmnts.snav.submittedForReview = Submitted for review
 frmelmnts.tab.all = All
 frmelmnts.tab.community = Groups
-frmelmnts.tab.courses = Trainings
+frmelmnts.tab.courses = Courses
 frmelmnts.tab.help = Help
 frmelmnts.tab.home = Home
 frmelmnts.tab.profile = Profile
