--- a/src/app/client/package.json
+++ b/src/app/client/package.json
@@ -31,7 +31,6 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/core": "^0.2.0",
-<<<<<<< HEAD
     "@angular/animations": "^7.2.15",
     "@angular/common": "^7.2.15",
     "@angular/compiler": "^7.2.15",
@@ -42,20 +41,8 @@
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
     "@ng-bootstrap/ng-bootstrap": "^3.3.1",
-    "@project-sunbird/telemetry-sdk": "^0.0.16",
-=======
-    "@angular/animations": "^7.2.10",
-    "@angular/common": "^7.2.10",
-    "@angular/compiler": "^7.2.10",
-    "@angular/core": "^7.2.10",
-    "@angular/forms": "^7.2.10",
-    "@angular/http": "^7.2.10",
-    "@angular/platform-browser": "^7.2.10",
-    "@angular/platform-browser-dynamic": "^7.2.10",
-    "@angular/router": "^7.2.10",
     "@project-sunbird/common-consumption": "^2.6.1",
     "@project-sunbird/telemetry-sdk": "^0.0.24",
->>>>>>> sunbirdportal/release-2.6.0
     "@project-sunbird/web-extensions": "^0.0.2",
     "@types/lodash": "^4.14.138",
     "angular-inport": "^2.0.1",
@@ -64,12 +51,8 @@
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
-<<<<<<< HEAD
-    "core-js": "^2.6.9",
-=======
     "common-consumption-styles": "0.0.4",
-    "core-js": "^2.4.1",
->>>>>>> sunbirdportal/release-2.6.0
+    "core-js": "^2.6.9",
     "datatables.net-dt": "1.10.19",
     "fine-uploader": "^5.15.7",
     "font-awesome": "^4.7.0",
@@ -101,6 +84,7 @@
     "ngx-order-pipe": "^2.0.4",
     "ngx-slick": "^0.2.1",
     "node-sass": "^4.12.0",
+    "nodemon": "^2.0.2",
     "rxjs": "^6.5.3",
     "shepherd.js": "^2.10.0",
     "slick-carousel": "1.6.0",
